# test-execution-orchestrator

./: .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  PRD.md  README.md  SECURITY.md  build_failures.txt  go.mod  go.sum  index.yaml  progress.md
.claude/: settings.local.json
.github/: cr.yaml  ct.yaml
.github/workflows/: ci.yml  release.yml
cmd/api/: main.go
cmd/predictor/: main.go  main_test.go
cmd/result-pipeline/: main.go
cmd/run-manager/: main.go
cmd/scheduler/: main.go
cmd/teo/: discover.go  doctor.go  main.go  replay.go
cmd/worker/: main.go
docs/: README.md
docs/adapters/: spi.md
docs/adr/: 0001-go-backend.md  0002-self-hosted-single-tenant.md  0003-storage-tiering.md  0004-otel-source-of-truth.md  0005-scheduler-pure-function.md  0006-cluster-autoscaler-mvp.md  0007-nats-jetstream.md  0008-graphql-api-surface.md  0009-helm-chart-deployment.md  0010-stable-test-fingerprint.md  0011-wilson-interval-flake.md  0012-mvp-scope-cut.md  0013-run-manager-leader-election.md  0014-auth-oidc-and-api-keys.md  0015-secrets-k8s-native.md  0016-redaction-on-worker.md  0017-backup-and-dr.md  0018-license-policy-apache2.md  0019-ml-predictor.md  0020-spot-interruption-checkpointing.md  0021-llm-root-cause-hints.md
docs/architecture/: api-design.md  data-model.md  deployment.md  diagrams.md  er-diagram.md  overview.md  schema.md  tech-stack.md
docs/backlog/: E-09-strategy.md  epics.md  stories.md  tasks.md
docs/handoff/: DEVELOPER_HANDOFF.md
docs/operations/: clickhouse-load-test.md  restore-drill.md
docs/process/: definition-of-done.md
docs/release-notes/: v1.0.0.md
docs/requirements/: functional.md  non-functional.md
proto/: buf.gen.yaml  buf.yaml
services/predictor-ml/: Dockerfile  pyproject.toml
services/predictor-ml/src/teo_predictor_ml/: __init__.py  app.py  features.py  models.py  registry.py  repo.py  train.py
services/predictor-ml/tests/: conftest.py  test_app.py  test_features.py
web/: .npmrc  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
(+265 files in other folders)
